# blogger

./: .env.example  .gitignore  ARTICLE_WRITING_FORMAT.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_PROGRESS.md  PHASE_5_SEO_PLAN.md  PHASE_6_PLAN.md  PUBLISH_INSTRUCTIONS.md  README.md  SEO_IMPROVEMENT_PLAN.md  app.py  decisions.md  goal.md  optimize_seo.py  publish_all_thumbnails.py  publish_quizzes.py  pyproject.toml  requirements.txt  roadmap.md  session-prompt.md  tasks.md  thumbnail-publishing.md
agents/: architect.md  goal.md  python_engineer.md  reviewer.md  seo_engineer.md
ai/: __init__.py  content_brief.py  exceptions.py  fact_checker.py  faq_generator.py  generator.py  internal_link_graph.py  internal_linking.py  keyword_optimizer.py  meta_optimizer.py  models.py  provider_factory.py  research.py  schema_generator.py  schema_howto.py  seo_title.py  summary_generator.py  topic_clustering.py
analytics/: __init__.py  content_audit.py  ga4_client.py  gsc_client.py  models.py
articles/: aiims-gorakhpur-recruitment-2026-junior-resident.md  bel-recruitment-2026-havildar-security-posts.html  belagavi-zilla-panchayat-recruitment-2026-district-manager-cluster-supervisor-posts.html  beml-recruitment-2026-chief-general-manager-engineer-posts.html  bgsss-recruitment-2026.html  bobcard-recruitment-2026-assistant-manager-sr-officer.html  bridge-man-of-india-girish-bharadwaj-passes-away.json  cftri-recruitment-2026-project-associate-i-posts.html  cotton-corporation-of-india-recruitment-2026.md  cris-recruitment-2026-project-assistant-pms-post.html  dfccil-recruitment-2026-agm-jgm-dgm-finance-post.html  directive-principles-india-quiz.html  emergency-provisions-india-quiz.html  fundamental-duties-india-quiz.html  fundamental-rights-india-quiz.html  global-passport-index-gpi-2026.json  ihmcl-recruitment-2026-systems-engineer-posts.html  indian-army-recruitment-2026-short-service-entry-technical-posts.html  indian-constitutional-amendments-essentials-quiz.html  karnataka-excise-department-recruitment-2025.md  karnataka-revenue-department-recruitment-2026-vao-posts.html  kfwccf-recruitment-2026.html  (+26 more)
(+74 files in other folders)
